final after submission and first skim

--- a/tex/conclusions.tex
+++ b/tex/conclusions.tex
@@ -6,4 +6,4 @@ Several aspects of the medium video such as the sensory nature of much of the in
 
 In our investigation of the use of human computation for meaningful video interpretation, we have implemented our own system called `wePorter' that uses implicit attentional feedback to provide interest-based video filtering at segment level. We have proposed `parallel play' as a method for user preference elicitation that may prove  particularly useful for time-based multimedia content. The system reconfigures hyperlinked parts of videos into new sequences, used both as unit for data acquisition and unit of presentation of filtered content. The developed framework allows for experimentation with filtering and recommendation based on implicitly acquired attention data.
 
-Although having received only a small number of interactions per video segment, initial evaluation shows that the filtering provided by our system corresponds to collective ratings of interest and more general assessments of preference. We have experimented on the domain of raw, unedited user-generated content contributed by attendees of a single large-scale public event. Experiments show that the proposed methods for filtering pick out video segments that are found to be evaluated relatively interesting and preferential compared to segments receiving low scores from our attention based methods.
+Although having received only a small number of interactions per video segment, initial evaluation shows that the filtering provided by our system corresponds to collective ratings of interest and more general assessments of preference. We have experimented on the broad domain of raw, unedited user-generated content contributed by attendees of a single large-scale public event. Experiments show that the proposed methods for filtering pick out video segments that are found to be evaluated relatively interesting and preferential compared to segments receiving low scores from our attention based methods.
