--- a/tex/main/discussion.tex
+++ b/tex/main/discussion.tex
@@ -16,8 +16,7 @@ The videos used for the main experiments have a total length of 25 minutes and t
 This is not yet regarding the system's filtering functionality. Once reliable estimates of user interest have been established from the collection of captured attentional ratings, we can filter for the parts that seem most interesting, that way enabling a convergence towards the most interesting video segments. A simple way of doing this would be to rank all video parts according to their average attentional rating and discard the parts that are systematically less attended to, on the assumption that they are considered less interesting. More complex procedures are of course possible, for example taking into account the number of ratings a part has received, the positions in sequence at which parts have been presented or the kind of users that have submitted the interactions (e.g. first time users versus experienced users). Once the initial set of source videos has been filtered, more data can be acquired for the remaining set, after which filtering can be applied again. This iterative process of filtering can continue until the process yields a small subset of video part that have acquired most attention in aggregate.
 
 % if filtering applied
-Filtering video parts to converge to a subset of the source videos that is  iteratively narrowed down, means that most interactive computation will be focussed on the video parts that receive most attention. There is an obvious issue of exploration versus exploitation here. When is filtering applied and what part of the current set of content is discarded in an iteration. Related to this filtering is the meaningful reconfiguration of segments into a new assemblage. Data-driven segment reconfiguration is currently left unexplored and it would be very exciting to see it explored in the future.
+Filtering video parts to converge to a subset of the source videos that is  iteratively narrowed down, means that most interactive computation will be focussed on the video parts that receive most attention. There is an obvious issue of exploration versus exploitation here. When is filtering applied and what part of the current set of content is discarded in an iteration. Related to this filtering is the meaningful reconfiguration of segments into a new assemblage. Data-driven segment reconfiguration is currently left unexplored and it would be very exciting to see it investigated in the future.
 
 % higher resolution of interest elicitation
-Besides conceptual extensions the proposed framework, there are numerous variations possible in the current implementation that would be good to explore. In its current version the system uses aggregate counts for the time a user focussed on a particular sub-clips. Since the interactive player is set up to capture users' focus every 100 milliseconds, this could also become the resolution of recording. That way each video parts would have $length/\delta$ time bins in a interest histogram. Another variation that will most likely yield exciting experiments, is to increase the number of videos displayed in parallel. Other potential variations include overlapping segment windows, using differently sized segment durations, the use of different video part durations within a single sequence.
-
+Besides conceptual extensions the proposed framework, there are numerous variations possible in the current implementation that would be good to explore. In its current version the system uses aggregate counts for the time a user focussed on a particular sub-clips. Since the interactive player is set up to capture users' focus every duration $\delta$ (currently 100 milliseconds), this could also become the resolution of recording. That way each video parts would have $length/\delta$ time bins in a focus histogram. Another variation that will most likely yield exciting experiments, is to increase the number of videos displayed in parallel. Other potential variations include overlapping segment windows, using differently sized segment durations, the use of different video part durations within a single sequence.
