--- a/tex/main/weporter.tex
+++ b/tex/main/weporter.tex
@@ -10,11 +10,11 @@
 
 \section{Introduction}
 
-This section describes the interaction design of the \emph{wePorter} system, built to exemplify how the paradigm of human computation can be used in tasks like filtering of video segments and semi-automated video reconfiguration. The system derives its name from the idea that many people interacting within the direction of a human computation system, may be able to collectively produce meaningful overview reports from a large set of publicly contributed video content of large scale events.
+This section describes the interaction design of the \emph{wePorter} system, built to exemplify how the paradigm of human computation can be used in tasks like filtering of video segments and semi-automated video reconfiguration. The system derives its name from the idea that many people interacting with a human computation system, may be able to collectively produce meaningful overview reports from a large set of user-contributed video content of large scale events.
 
-The wePorter system runs an interactive webpage that functions as the main source for data acquisition, presentation of results and general proof of concept. In this chapter the system is analysed along the axes of \textit{purpose}, \textit{motivation} and \textit{task}, that were introduced in the analysis of Human Computational systems in chapter \ref{ch:human_computation}. Next to these guidelines for analysis, some remarks are made about the specifics in the functioning of the system. Lastly we discuss the implementation of the web application that is central in wePorter.
+The wePorter system runs an interactive webpage that functions as the main source for data acquisition, presentation of results and general proof of concept. In this chapter the system is analysed along the axes of \textit{purpose}, \textit{motivation} and \textit{task}, that were introduced in the analysis of Human Computational Systems in chapter \ref{ch:human_computation}. Next to these guidelines for analysis, remarks are made about the specifics in the functioning of the system. Lastly we discuss the implementation of the web application that is central in wePorter.
 
-\section{User Generated Video Content}
+\section{User-Generated Video Content}
 \label{sec:weporter_ugvc}
 
  
@@ -27,7 +27,7 @@ The wePorter system runs an interactive webpage that functions as the main sourc
 % 
 
 \begin{quote}
-  ``Since the dawn of YouTube, we’ve been sharing the hours of video you upload every minute. In 2007 we started at six hours, then in 2010 we were at 24 hours, then 35, then 48, and now...60 hours of video every minute, an increase of more than 25 percent in the last eight months. In other words, you’re uploading one hour of video to YouTube every second. Tick, tock, tick, tock — that’s 4 hours right there!'' \footnote{\url{http://YouTube-global.blogspot.co.uk/2012/01/holy-nyans-60-hours-per-minute-and-4.html}}  
+  ``Since the dawn of YouTube, we’ve been sharing the hours of video you upload every minute. In 2007 we started at six hours, then in 2010 we were at 24 hours, then 35, then 48, and now...60 hours of video every minute, an increase of more than 25 percent in the last eight months. In other words, you’re uploading one hour of video to YouTube every second. Tick, tock, tick, tock — that’s 4 hours right there!''\footnote{\url{http://YouTube-global.blogspot.co.uk/2012/01/holy-nyans-60-hours-per-minute-and-4.html}}  
 \end{quote}
 
 These astonishing figures of the amount of video that is uploaded to YouTube are nothing short of mind blowing, but will most likely sound dated in a matter of years or even months. Looking at the increase of content uploaded to the video platform in past years, the growth does not seem likely to come to a halt soon. All these videos are great for online video junkies, and are increasingly part of the online journalism landscape \cite{Rosenstiel:2012vb}. At the same time, all these videos being put online beg the question which ones of them to watch.
@@ -40,14 +40,14 @@ The increasing amounts of user-generated video content (UGVC) being put online, 
 \label{sec:weporter_purpose}
 
 % Searching -> IR
-With more than an hour of new content per second it is no wonder that YouTube has come to be viewed as the go-to for online video, much like ``the digital video repository for the Internet'' \footnote{\url{http://YouTube-global.blogspot.co.uk/2005/07/greetings-everyone-thanks-for-visiting.html}} that was envisioned by its founders in their first official blog post. An important activity on video platforms like YouTube is searching and much work has focussed on video retrieval\cite{Liu:2007fv,Snoek:jf,Christel:2005td,Halvey:2007tz,Kankanhalli:2008uv,Hollink:2005ei,DeRooij:2008ut,Snoek:2009dq,Smeaton:2008go}. We review the different aims in users' interaction in video retrieval tasks and point to an aspect of video retrieval that has not received much attention in recent research. This is the challenge of segmented video recommendation and we will explain why it forms a problem task to address within a Human Computation System like wePorter.
+With more than an hour of new content per second it is no wonder that YouTube has come to be viewed as the go-to for online video, much like ``the digital video repository for the Internet''\footnote{\url{http://YouTube-global.blogspot.co.uk/2005/07/greetings-everyone-thanks-for-visiting.html}} that was envisioned by its founders in their first official blog post. An important activity on video platforms like YouTube is searching and much work has focussed on video retrieval\cite{Liu:2007fv,Snoek:jf,Christel:2005td,Halvey:2007tz,Kankanhalli:2008uv,Hollink:2005ei,DeRooij:2008ut,Snoek:2009dq,Smeaton:2008go}. We review the different aims in users' interaction in video retrieval tasks and point to an aspect of video retrieval that has not received much attention in recent research. This is the challenge of segmented video recommendation which forms a task we address in wePorter.
 
 \subsection{Different Aims}
 % [TD change wording "goals" to "Aims", ref \cite{Smeulders:2000tx}]
 Annotations reflecting the content of a video can, along with other meta data of the video, be used for retrieval of videos in response to textual queries§. The effectiveness of such a retrieval task varies depending on the information that is used in the search algorithm and the type of content that is searched for \cite{Hollink:2005ei}. A third characteristic that determines the effectiveness of a video retrieval system is the goals that users have in their usage of the system \cite{Hollink:2005ei}. User goals can vary widely from more to less specific\cite{Davidson:2010tu}. We expand on this latter point, as it forms an important context for the wePorter system.
 
 \subsubsection{Direct Navigation}
-The most specific goal is exemplified by a user who is drawn to a video platform by a direct link from an external website. Links can either be in the form of actual hyperlinks or playable embedded videos that are followed through to the platform. Navigations via such links form a direct mapping between a user's intention to the desired piece of content. In this case, users have a very specific reason to come and watch. Their desire, at least of knowing the contents of the video, is satisfied after the viewing. YouTube's system engineers call this way of video viewing \emph{direct navigation}\cite{Davidson:2010tu}.
+The most specific goal is exemplified by a user who is drawn to a video platform by a direct link from an external website. Links can either be in the form of actual hyperlinks or playable embedded videos that are followed through to the platform. Navigations via such links form a direct mapping between a user's intention to the desired piece of content. In this case, users have a very specific reason to come and watch. Their desire, at least of knowing the contents of the video, is satisfied after the viewing. YouTube's system engineers call this way of video viewing \emph{``direct navigation''}\cite{Davidson:2010tu}.
 
 \subsubsection{Search and Goal-oriented browse}
 When users have not obtained a direct link to a potentially relevant piece of content, they might still have a specific goal in mind when visiting an online video platform. Reasons to visit might be the wish to see a particular music video or to find an instance of a series by a particular producer. This goal of discovering a rather specific video is referred to as \emph{``search and goal-oriented browse''}\cite{Davidson:2010tu}. Provided that the desired piece of content exists and the video platform has an appropriate search function in place, these `narrow queries', will result is a result set of search results from which the user is likely to handpick the sought-after result fairly quickly. Here the user's desired result often lies within a single item of content. Perhaps a few misses are required, but after a couple of clicks the user hits the desired video.
@@ -118,9 +118,9 @@ While the journalism study above focusses on videos with the `News \& Politics' 
 
 \subsection{Informative Entertainment}
 
-The wePorter system focusses on these kinds of topically related sets that people are currently exploring interactively by browsing from one video to the next. This way of navigation is an intermediary between the goals of \textit{goal-oriented browse} and \textit{unarticulated want}. . The apparently aimless browsing is now encapsulated by the event but users still roam freely within this topicalised set of content. By navigating from video to video, watching some and skipping others, users leave attentional traces that give valuable insight into a user's intentional standpoint.
+The wePorter system focusses on these kinds of topically related sets that people are currently exploring interactively by browsing from one video to the next. This way of navigation is an intermediary between the goals of \textit{goal-oriented browse} and \textit{unarticulated want}. The apparently aimless browsing is now encapsulated by the event but users still roam freely within this topicalised set of content. By navigating from video to video, watching some and skipping others, users leave attentional traces that might give valuable insight into their intentional standpoint.
 
-It is this kind of interactions that are already taking place at a large scale that we like to make use of in the wePorter system. Motivated by the wish to explore informative content, users will instinctively and implicitly contribute their human knowledge to a system that is set up appropriately. This kind of motivation fits the category of `implicit work' as it involves activities that people already engage in for their own reasons \cite{Quinn:2011us}. Considering users' wish to be informed and the interactive way in which they navigate, there is most likely also a factor of entertainment involved though. We expect though that the more specific motivation of information provision might show to become a valid categorisation for the motivation of people in a HCS as it is a common activity on the web and inherently linked with the hard problem of meaningful interpretation of content.
+It is this kind of interactions that are already taking place at a large scale that we like to make use of in the wePorter system. Motivated by the wish to explore informative content, users will instinctively and implicitly contribute their human knowledge to a system that is set up appropriately. This kind of motivation fits the category of `implicit work' as it involves activities that people already engage in for their own reasons \cite{Quinn:2011us}. Considering users' wish to be informed and the interactive way in which they navigate, there is most likely also a factor of entertainment involved. We expect that the more specific motivation of information provision might show to become a valid categorisation for the motivation of people in a HCS as it is a common activity on the web and inherently linked with the hard problem of meaningful interpretation of content.
 
 \section{The Task}
 \label{sec:weporter_task}
@@ -197,7 +197,7 @@ The first part of the title above was originally voiced by Roland Barthes in a 1
 In our aim of reconfiguring interesting sub-clips into a new arrangement, the changing role of the author surfaces in a new context. Barthes' thoughts are relevant in two ways. First because he sees an author's work as the reconfiguration of previous works. Second because he assigns the reader (spectator, viewer, listener, etc) the important role of central interpreter. This links to the contextual nature of human perception discussed in section \ref{sec:challenges_in_interpretation} as well as the active role a reader takes in the construction of a coherent story. Explicit reconfigurations of video content may be a way to provide users with a basis from which they `enact' their own interpretation of a story or a depicted event.
 
 % less restrictiv licensing -> remixing
-(Co-)authoring by means of reconfiguration or \emph{`remixing'} is common practice in today's vivid content sharing communities \cite{Diakopoulos:2007jn} and an important factor in these relatively new forms of creation seems to be attribution\cite{Luther:2010wq}. Although classically intellectual property licences mostly have a restrictive function (protecting my intellectual property from being exploited), new less restrictive licences also offer a way of attribution in digital content that is derived from external sources. Less restrictive forms of digital content licensing, like Creative Commons (CC), mean that it is now possible for content uploaded by its original creator, to be used under specified conditions in a new piece of work by someone else. This kind of licences has been noted to be an important facilitator of research into Human Computation\cite{Law:2009vl}. They make it possible for works not only to be used and remixed by other individuals, but also to be incorporated in algorithmically constructed reconfigurations of user generated content.
+Co-authoring by means of reconfiguration or \emph{`remixing'} is common practice in today's vivid content sharing communities \cite{Diakopoulos:2007jn} and an important factor in these relatively new forms of creation seems to be attribution\cite{Luther:2010wq}. Although classically intellectual property licences mostly have a restrictive function (protecting my intellectual property from being exploited), new less restrictive licences also offer a way of attribution in digital content that is derived from external sources. Less restrictive forms of digital content licensing, like Creative Commons (CC), mean that it is now possible for content uploaded by its original creator, to be used under specified conditions in a new piece of work by someone else. This kind of licences has been noted to be an important facilitator of research into Human Computation\cite{Law:2009vl}. They make it possible for works not only to be used and remixed by other individuals, but also to be incorporated in algorithmically constructed reconfigurations of user-generated content.
 
 % popularity CC
 Different video platforms are currently offering less-restrictive CC licensing as an integrated part of their services. YouTube currently offers the option of choosing a most basic attribution licence and reports 4 million videos licensed this way \cite{YouTubeCC}. The video platform Vimeo\footnote{\url{www.vimeo.com}} focusses on letting video and animation producers share and showcase their original work. The platform has internalized the use of CC from 2010\cite{vimeoTimeline} and many of their users licence their videos such that they can be remixed by others. Figure \ref{fig:vimeoCC} shows that a large part of the licences on the Vimeo platform allow derivatives to be made\cite{vimeoCC}.
@@ -222,9 +222,9 @@ Besides the collective actions of the multiple users that help shape the creatio
 % intro
 This sections describes the user interface that directs participation of wePorter users towards solving the purpose of distinguishing local intervals of interest within videos. After a conceptual overview of the functioning we include a walkthrough to explain precisely how the interaction takes place.
 
-We hypothesise that users will spend more time attending to parts of content they find interesting than to parts of content they find less interesting. To state the our assumption about the relation between users' attention and interest more formally we adjust the formulation of Xu et al.\cite{Xu:2008vb} to address global interest in video segments. For a video segment $i$ we denote the user $u_j$\'s attention to it as $focus(i, u_j)$, which is the time the user spends attending to the object. Let $i_1$ and $i_2$ be two video segments. Let's assume after they are both presented to and watched by the user $u_j$, we have $focus(i_1,u_j) > focus(i_2,u_j)$; then it is reasonable to infer that $u_j$ is more interested in $i_1$ than $i_2$.
+We hypothesise that users will spend more time attending to parts of content they find interesting than to parts of content they find less interesting. To state the our assumption about the relation between users' attention and interest more formally we adjust the formulation of Xu et al.\cite{Xu:2008vb} to address global interest in video segments. For a video segment $i$ we denote the user $u_j$'s attention to it as $focus(i, u_j)$, which is the time the user spends attending to the object. Let $i_1$ and $i_2$ be two video segments. Let's assume after they are both presented to and watched by the user $u_j$, we have $focus(i_1,u_j) > focus(i_2,u_j)$; then it is reasonable to infer that $u_j$ is more interested in $i_1$ than $i_2$.
 
-We further hypothesise that for unstructured UGVC, patterns of interest are at some level shared across multiple people. Or, expressed formally, that if focus rates $focus(i_1,u_x)$ are high for a large number of different users $u_x$ we can extrapolate to users $u_y$ that have not yet been presented with segments $i_1$ and infer that they might the segment is interesting to them ass well. The assumption is analogous for segments that have receive considerable amounts of low focus rates.
+We further hypothesise that for unstructured UGVC, patterns of interest are at some level shared across multiple people. Or, expressed formally, that if focus rates $focus(i_1,u_x)$ are high for a large number of different users $u_x$ we can extrapolate to users $u_y$ that have not yet been presented with segments $i_1$ and expect that they might find the segment is interesting to them ass well. The assumption is analogous for segments that have received considerable amounts of low focus rates.
 
 % parallel play; move up to design considerations?
 To force a users to make an explicit choice between parts of content for which we would like to elicit their preference, we present two pieces of video playing concurrently and force users to attend to one or the other. In order to get an idea of the variation of interest across a video, each \emph{`source video'} $v_k$ is divided into smaller segments called \emph{`video parts'} $\{i_1,...,i_n\}$, each of which is presented separately in interactions over time. During this `parallel play' of two video parts we capture the amount of time user $u_j$ focusses on each of the parts  $i_1$ and $i_2$ resulting in the pair $\{focus(i_1,u_j), focus(i_2,u_j)\}$ and store this for later analysis.
