--- a/tex/main/evaluation.tex
+++ b/tex/main/evaluation.tex
@@ -45,7 +45,7 @@ The first trial presented test group users with a first part in the bottom seque
 \end{figure}
 
 
-The effects of Positional Bias and Context Dependency are mainly interesting when experiments involve large amounts of data. This is first of all because of the increased statistical power that large data set bring to the table for these experiments themselves. Second, the experiments, in particular the one studying influences of context, are aimed at acquisition of knowledge that helps to steer the design of methods that needs many more data points that the limited set we have been able to acquire in our main experiment. Initial sets of data for both the Positional Bias and Context Dependency experiment have been obtained, but as they do little for the purpose of the current thesis, their analyses is left out of this work.
+The effects of Positional Bias and Context Dependency are mainly interesting when experiments involve large amounts of data. This is first of all because of the increased statistical power that large data set bring to the table for these experiments themselves. Second, the experiments, in particular the one studying influences of context, are aimed at acquisition of knowledge that helps to steer the design of methods that needs many more data points that the limited set we have been able to acquire in our main experiment. Initial sets of data for both the Positional Bias and Context Dependency experiment have been obtained, but as they do little for the purpose of the current thesis, their analyses is left out of this work. The descriptions of the two experiments are included to indicate the two issues at hand and point to possible ways to investigate.
 
 \section{Main Experiments} % (fold)
 \label{sec:main_experiments}
@@ -81,11 +81,11 @@ The sequence loading procedure shown in algorithm \ref{alg:genseqs}, prepares tw
 
 \subsubsection{Clean Data} % (fold)
 
-Data returned from the capturing of attentional behaviour in the parallel player interface might have several deficiencies that we deal with by preprocessing the data before we start analysis. Deficiencies range from inaccurate artefacts induced by the interface to users' behaviour patterns that make their data less revealing. Such patterns are expected to be caused by misunderstood instructions and minor technical shortcomings in the implementation of the web interface.
+Data returned from the capturing of attentional behaviour in the parallel player interface might have several deficiencies that we deal with by preprocessing the data before we start analysis. Deficiencies range from artefacts induced by the inaccurate functioning of the interface to users' behaviour patterns that make their data less revealing. Such patterns are expected to be caused by misunderstood instructions and minor technical shortcomings in the implementation of the web interface.
 
-Some entries show focus rates of both sequences consistently valued at zero. This can either be caused by a malfunction of the focus counter functionality or by a user simply not focussing on either of the videos. These entries are completely deleted from the dataset. Although not present in the data required in our current experiments, it focus rates of segments within a single sequence might also be consistently high valued. This indicates at behaviour of someone who did not decided to change in focus. Although it might be a sign that the user is simply most interested in the one particular sequence, we would also discard these entries as they are most likely to result of a lazy participant who decided not to move the mouse or someone who misunderstood the instructions. Moreover interactions patterns that aren't the cause of active exploration of the content are not likely to reveal useful information with regard to a user's interest.
+Some entries show focus rates of both sequences consistently valued at zero. This can either be caused by a malfunction of the focus counter functionality or by a user simply not focussing on either of the videos. These entries are completely deleted from the dataset. Although not present in the data required in our current experiments, focus rates of segments within a single sequence might also be consistently high valued. This indicates behaviour of someone who decided not to change focus. Although it might be a sign that the user is simply most interested in the one particular sequence, we would also discard these entries as they are most likely to result of a lazy participant who decided not to move the mouse or someone who misunderstood the instructions. Moreover, interactions patterns that aren't the cause of active exploration of the content are not likely to reveal useful information with regard to a user's interest.
 
-The unit of measurement for focus time as captured by the parallel play interface is 100ms. A ten second clip can theoretically thus acquire a focus rate of 100, indicating a user has focussed for the complete duration of 10 seconds. A user dividing focus over two parallel videos would result in two focus rate around 50 that together add up to maximally 100. Practically however, many focus pairs in the dataset have a combined sum over 100. This is most likely cause by the method of logging focus counts. Although counters are only increased when a video is playing to prevent a video's potential load time to contribute to its focus rate, there may still be glitches induces by videos not playing bad continuously in the web browser. Also, moving the mouse quickly back and forth between the two videos can cause the two counters to be increased during a single time frame of 100 ms. These technical shortcomings should be addressed in a future implementation. 
+The unit of measurement for focus time as captured by the parallel play interface is 100ms. A ten second clip can theoretically thus acquire a focus rate of 100, indicating a user has focussed for the complete duration of 10-seconds. A user dividing focus over two parallel videos would result in two focus rate around 50 that together add up to maximally 100. Practically however, many focus pairs in the dataset have a combined sum over 100. This is most likely cause by the method of logging focus counts. Although counters are only increased when a video is playing to prevent a video's potential load time to contribute to its focus rate, there may still be glitches induces by videos not playing bad continuously in the web browser. Also, moving the mouse quickly back and forth between the two videos can cause the two counters to be increased during a single time frame of 100 ms. These technical shortcomings should be addressed in a future implementation. 
 
 Because of the varying sum of focus rate pairs, it is more indicative to look at the ratio between the two parallel rates than to absolute rates. This way a focus rate of 50 in pair $\{focus(50,u_j), focus(50,u_j)\}$ has a different contribution than in pair $\{focus(50,u_k), focus(0,u_k)\}$. Likewise, it ensures that a rate of 30 in the pair $\{focus(30,u_l), focus(30,u_l)\}$ has a contribution equal to that of the rate of 50 in the pair received from user $u_j$. 
 
@@ -96,7 +96,7 @@ Because of the varying sum of focus rate pairs, it is more indicative to look at
   \label{fig:histogram_ratingsSum}
 \end{figure}
 
-A further processing set is to weigh the ratios depending on the size of their sum. This is to emphasise focus pairs with a sum around 100 as this indicates a user has spend the full playing time focussing on at least on of the presented sequences. figure \ref{fig:histogram_ratingsSum} shows the distribution of the sum of parallel focus counts. Focus pairs whose rates sum to values between 20 and 160 are weighted once, sums between 70 and 120 are weighted twice. Focus rates that sum to other values are discarded.
+A further processing step is to weigh the ratios depending on the size of their sum. This is to emphasise focus pairs with a sum around 100 as this indicates a user has spend the full playing time focussing on at least on of the presented sequences. figure \ref{fig:histogram_ratingsSum} shows the distribution of the sum of parallel focus counts. Focus pairs whose rates sum to values between 20 and 160 are weighted once, sums between 70 and 120 are weighted twice. Focus rates that sum to other values are discarded.
 
 Figure \ref{fig:videoparts_focus} shows both average absolute focus rates and average weighted ratios received for all video parts. For clarity, ratios in the plot are scaled by a factor 100 to match the absolute rates' order of magnitude.
 
@@ -119,7 +119,7 @@ To find a reasonable amount of video parts for most of the source videos in the 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=1\textwidth]{img/focus_selection}
-  \caption{Video parts considered for filtering}
+  \caption{Video parts considered for filtering based on their focus ratios}
   \label{fig:focus_selection}
 \end{figure}
 
@@ -134,23 +134,23 @@ By capturing the amount of focus time, we receive measures for user attention. W
 
 To see how focus measures relate to user preference, we compare video parts which have received low focus rates to those who received relatively high rates. We construct three types of videos from our data set of video parts based on their weighted focus:
 \begin{enumerate}
-  \item two complete sets of \emph{parallel play sequence pairs}, one consisting of two sequences of 6 parts from the \emph{best} set the other consisting of two sequence of 6 from the worst set. For both sets, video parts with the highest (and lowest respectively) focus rates per source video are selected to encourage variety in the reconfiguration.
+  \item two complete sets of \emph{parallel play sequence pairs}, one consisting of two sequences of 6 parts from the \emph{best} set, the other consisting of two sequence of 6 from the worst set. For both sets, video parts with the highest (and lowest respectively) focus rates per source video are selected to encourage variety across sources in the reconfiguration.
   \item four \emph{sequences of 6 video parts}, two consisting of the video parts with the highest (lowest) focus rate per source video, two consisting of the 6 video parts with highest (lowest) focus rate that were not yet selected for the parallel play sequences.
-  \item twelve \emph{single 10 second video parts}, consisting of 6 pairs of corresponding video parts with minimum and maximum focus rate for their mutual source video.
+  \item twelve \emph{single 10-second video parts}, forming 6 pairs of corresponding video parts with minimum and maximum focus rate for their mutual source video.
 \end{enumerate}
 
 Subjects in the evaluation experiment were presented with pairs of content of the three different types described above, one video from the \emph{best} set, the second video from the \emph{worst} set, without subjects knowing the nature of the videos' content. The positioning left or right on screen was done at random to counter possible effects of bias by the positioning. 
 
-After the presentation of the two videos, subjects were asked to rate what they were shown based on how \emph{informative}, \emph{entertaining} and \emph{interesting} they thought the content was. Subjects were instructed to rate content on a range form 1 being very \{uninformative, unentertaining, uninteresting\}, 3 being neutral, 5 being very \{informative, entertaining, interesting\}.
+After the presentation of the two videos, subjects were asked to rate what they were shown based on how \emph{informative}, \emph{entertaining} and \emph{interesting} they thought the content was. Subjects were instructed to rate content on a range form 1 being very \{uninformative, unentertaining, uninteresting\}, 3 being neutral, 5 being very \{informative, entertaining, interesting\}. 
 
 Besides this, they were asked to choose which of the two presented videos has their preference. Histograms of the received rating are include per video type for each category of assessment below.
 
 \subsubsection{Parallel Play Interaction}
 \paragraph{Ratings}
 
-For each of the three dimensions (indicated by colour) of a user's assessment of a parallel played sequence interactions we have plotted how the frequency of the occurrence of the distinct ratings differs for sequences sourced from the selection of video parts with either high focus rates (the best set) or low focus rates (the worst set).
+For each of the three dimensions (indicated by colour) of a user's assessment of a parallel played sequence interaction we have plotted how the frequency of the occurrence of the distinct ratings differs for sequences sourced from the selection of video parts with either high focus rates (the best set) or low focus rates (the worst set).
 
-If our hypotheses on the relation between focus and interest are correct, we would expect higher evaluation ratings for the parts that are sourced from the best set, compared to those from the worst set. On the level of parallel sequence interaction this is the case for both entertainment ratings and interest ratings. On these two dimensions videos from the worst set are more commonly given low rating, while videos from the best set are more prominent on the high end of the rating spectrum.
+If our hypotheses on the relation between focus and interest are correct, we would expect higher evaluation ratings for the parts that are sourced from the best set, compared to those from the worst set. On the level of parallel sequence interaction this is the case for both entertainment ratings and interest ratings. On these two dimensions, videos from the worst set are more commonly given low ratings, while videos from the best set are more prominent on the high end of the rating spectrum. This is indicated by greater frequency of high ratings for the best set and greater frequency of low ratings for the worst set.
 
 \begin{figure}[htbp]
   \centering
@@ -207,7 +207,7 @@ The leaning to `good' content for the second pair of sequences is more clearly a
 \subsubsection{Video Parts}
 \paragraph{Ratings}
 
-Looking at the ratings of the 10 second different videos parts, two videos are most interesting. Video pair 1 and 6 show the most difference in ratings between the two sets of content. Manual inspection of the video parts (originally numbered 11 and 3 in figure \ref{fig:videoparts_focus} for pair one and 133 and 142 for pair 6) reveal that both video pairs consist of two pieces of content with a significantly difference in activity. Because of the unedited nature of the content used for the experiment, the scene setting are mostly the same. Yet in one videos originating from the set with high focus rates, a carriage transporting her majesty Queen Elizabeth passes by in full view and in the other pair the video from this set shows a zoomed in shot an a particular boat. The alternative video parts respectively show a couple of horses together with a handful of union jacks and a zoomed out pan-shot capturing many people filming and photographing the Jubilee's boat parade on the river Thames. Apart from video parts in pair three have a similar nature to those in pair 1. The content in the other pairs differs hardly.
+Looking at the ratings of the 10-second different videos parts, two videos are most interesting. Video pair 1 and 6 show the most difference in ratings between the two sets of content. Manual inspection of the video parts (originally numbered 11 and 3 in figure \ref{fig:videoparts_focus} for pair 1 and 133 and 142 for pair 6) reveal that both video pairs consist of two pieces of content with a significant difference in activity. Because of the unedited nature of the content used for the experiment, the scene settings are mostly the same. Yet in one of videos (pair 1) originating from the set with high focus ratios, a carriage transporting her majesty Queen Elizabeth passes by in full view and in pair 6 the video from this set shows a zoomed-in shot of a particular boat. The alternative video parts (from the set with low focus ratios) respectively show a couple of horses together with a handful of union jacks and a zoomed out pan-shot capturing many people filming and photographing the Jubilee's boat parade on the river Thames. Video parts in pair three have a similar nature to those in pair 1, but do not show similar patterns in evaluations. The content in the other pairs differs hardly.
 
 \begin{figure}
   \centering
@@ -262,18 +262,18 @@ Looking at the ratings of the 10 second different videos parts, two videos are m
     \label{fig:evalVideo6}
   \end{subfigure}
 
-  \caption{Histograms of ratings for six 10 second video parts}
+  \caption{Histograms of ratings for six 10-second video parts}
   \label{fig:evalVideos}
 \end{figure}
 
 \paragraph{Preference}
 
-The 
+The plot of preference frequencies in figure \ref{fig:evalVideosPref} shows an almost unanimous choice for the parts from the best set for pairs 1 and 6. This is a nice result, as it indicates that the distinction by our attentional filtering mechanism corresponds to evaluation of preference for two pair that show a significant difference in contents. While pair three has a similar difference in content between the two videos, subjects show no collective preference for the video from the best set. Overall best set videos have received 38 preferences, while worst set have been preferred only 22 times (32 times no preference was given). While this doesn't indicate a unanimous agreement, it does show correlation between the distinctions made by the attentional filtering and user evaluation. As can be expected the effects are strongest for video parts that differ in content.
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=.6\textwidth]{img/evaluation/pref_videos_all}
-  \caption{Histogram of preference for 10 second video parts}
+  \caption{Histogram of preference for 10-second video parts}
   \label{fig:evalVideosPref}
 \end{figure}
  
@@ -290,7 +290,7 @@ In addition to the interactive experiment using the parallel play interface subj
 \label{sub:questions}
 
 \subsubsection{Online Video Content}
-To get a better picture of the subject who participated in the experiment, they were instructed to rate on a discrete scale from one to five the frequency and aggregate daily duration of their interactions with online video as well as how often they feel the content they view is news-related. Figure \ref{fig:quest_consumption} shows amongst others that a large majority of the subjects is accustomed to watching online video on a daily basis, typically for a durations between 10 and 30 minutes.
+To get a better picture of the subjects who participated in the experiment, they were instructed to rate on a discrete scale from one to five the frequency and aggregate daily duration of their interactions with online video as well as how often they feel the content they view is news-related. Figure \ref{fig:quest_consumption} shows amongst others that a large majority of the subjects is accustomed to watching online video on a daily basis, typically for a durations between 10 and 30 minutes.
 
 \begin{figure}[htbp]
   \centering
@@ -359,7 +359,7 @@ Some participants even offered ideas as to how they saw the project could be ext
 
 It is first of all interesting to see which parts of the initial sources videos are picked up by the attention-based filtering mechanism. Manual inspection shows that for source videos that feature intervals of prominent visual activity, parts of this concept can be automatically selected and used in reconfiguration. The low number of interactions per video part definitely contributes to the variation in focus data over time. Increasing the number of interactions per video part will smooth out the data and solidify mountains of attention and valleys of lack of attention.
 
-The initial evaluation performed at multiple levels of reconfigured or deconstructed video, shows that although user evaluations and preferences differ considerably across much of the content, some footage shows signs of correspondence between the time spent focussing by several users on segments of video and the collective evaluation of these parts. Moreover, the global correlation between acquired focus rates and the user preference data acquired in the evaluation experiment, indicate that we are on to something. For six out of the nine pairs of reconfigurations, the `filtered in' piece of content selected for its high focus rates, is evaluated by a majority of the evaluation subjects as most preferential. This is compared to one pair of 10 second video parts where the `filtered out' member received a majority of the preferences.
+The initial evaluation performed at multiple levels of reconfigured or deconstructed video, shows that although user evaluations and preferences differ considerably across much of the content, some footage shows signs of correspondence between the time spent focussing by several users on segments of video and the collective evaluation of these parts. Moreover, the global correlation between acquired focus rates and the user preference data acquired in the evaluation experiment, indicate that we are on to something. For six out of the nine pairs of reconfigurations, the `filtered in' piece of content selected for its high focus rates, is evaluated by a majority of the evaluation subjects as most preferential. This is compared to one pair of 10-second video parts where the `filtered out' member received a majority of the preferences.
 
 
 
