--- a/tex/main/humanComputation.tex
+++ b/tex/main/humanComputation.tex
@@ -18,12 +18,12 @@ In the same paper, Turing explains the idea of a digital computer by relating it
   ``[t]he idea behind digital computers may be explained by saying that these machines are intended to carry out any operations which could be done by a human computer''\cite{Turing:1950wi}
 \end{quote}
 
-The notion of `human computer' asks for some contextualisation, as in the last few decades we've become unaccustomed to the term. Human computers were not uncommon in the time of Turing and before that from the 18th century, when `computer' was used to signify `one who computes'\cite{grier2007computers}. People bearing the function title were involved in the execution of calculations produced by strictly following mathematical theories. The activity that these computers were involved in were processes of rote, not requiring any human creativity. While working on the design for the first ever mechanical computer, Charles Babbage refers to it as ``mental labour''\cite[Ch.\ 20]{Babbage:1832vu}.
+The notion of `human computer' asks for some contextualisation, as in the last few decades we've become unaccustomed to the term. Human computers were not uncommon in the time of Turing and before that from the 18th century, when `computer' was used to simply signify `one who computes'\cite{grier2007computers}. People bearing the function title were involved in the execution of calculations produced by strictly following mathematical theories. The activity that these computers were involved in were processes of rote, not requiring any human creativity. While working on the design for the first ever mechanical computer, Charles Babbage refers to it as ``mental labour''\cite[Ch.\ 20]{Babbage:1832vu}.
 
 The idea that some tasks are hard to express in computational terms but easily solved by humans has received much attention in recent years. \emph{`Human computation'} as an academic paradigm saw its development sparked by a doctoral theses by Luis von Ahn in 2005 and has seen an increase of attention since that time\cite{Quinn:2011us}. The main idea in human computation is that certain tasks that are too hard to solve by current computational techniques, may be solved by the combined effort of humans contributing their cognitive skills. 
 
 % current definition of HC
-In a recent survey paper, Quinn and Bederson present a taxonomy of human computation \cite{Quinn:2011us}. They sketch the trend of this new paradigm for intelligent problem solving by pointing at the increase of academic papers featuring the term `human computation' and its relative `crowd-sourcing'. They summarise a myriad of definitions given in recent works by different authors in two key points about the nature of \emph{Human Computation Systems} (HCS) and the problems they intent to solve:
+In a recent survey paper, Quinn and Bederson present a taxonomy of human computation \cite{Quinn:2011us}. They sketch the trend of this new paradigm for intelligent problem solving by pointing at the increase of academic papers featuring the term `human computation' and its relative `crowd-sourcing'. They summarise a myriad of definitions given in recent works by different authors in two key points about the nature of \emph{Human Computation Systems} (HCS) and the problems they intend to solve:
 
 \begin{itemize}
   \item ``The problems fit the general paradigm of computation, and as such might someday be solvable by computers."
@@ -86,7 +86,7 @@ Human computation systems can have different numbers of interacting users. On th
 \subsection{Describing a Human Computation System} % (fold)
 \label{sub:describing_hcs}
 
-The generic analyses proposed in \cite{Quinn:2011us} are useful for the comparison of different systems as they seem to capture in a concise way many aspects these systems have in common or set them apart. They are good for a broad characterisation and categorisation of systems, but lack the expression to talk in detail about the what constitutes a specific system. For this reason we propose the  combination of \emph{`purpose'}, \emph{`motivation'} and \emph{`task'} to help in the conceptual description of a human computation system. The concepts are closely linked to the distinction of the three roles of ``requester'', ``worker'' and ``computer'' made in \cite{Quinn:2011us}. Our proposed concepts though, focus more at the functionality of the system rather than merely pointing to components. In chapter \ref{ch:weporter} we propose our own system and use these concepts in its description.
+The generic analyses proposed in \cite{Quinn:2011us} are useful for the comparison of different systems as they seem to capture in a concise way many aspects these systems have in common or set them apart. They are good for a broad characterisation and categorisation of systems, but lack the expression to talk in detail about what constitutes a specific system. For this reason we propose the  combination of \emph{`purpose'}, \emph{`motivation'} and \emph{`task'} to help in the conceptual description of a human computation system. The concepts are closely linked to the distinction of the three roles of ``requester'', ``worker'' and ``computer'' made in \cite{Quinn:2011us}. Our proposed concepts though, focus more on the functionality of the system rather than merely pointing to components. In chapter \ref{ch:weporter} we propose our own system and use these concepts in its description.
 
 \subsubsection{Purpose}
 
@@ -98,7 +98,7 @@ A comprehensive description of motivation is given in our discussion of Quinn an
 
 \subsubsection{Task}
 
-Finally a description of a HCS should include a detailed description of the task presented to the worker along with information about how user-contributed data is being acquired and subsequently processed. The task forms the most technical level of description and is thus related to the role of the \emph{computer}. Task descriptions should indicate how the computer is involved in the direction of user interaction towards the purpose that is addressed in the system.
+Finally a description of a HCS should include a detailed description of the task presented to the worker along with information about how user-contributed data is being acquired and subsequently processed. The task forms the most technical level of description and is related to the role of the \emph{computer}. Task descriptions should indicate how the computer is involved in the direction of user interaction towards the purpose that is addressed in the system.
 
 % subsection describing_human_computation_systems (end)
 
@@ -111,9 +111,9 @@ Several aspects make the paradigm of human computation well-suited for applicati
 
 In general, many of the problems that are currently hard to solve computationally are related to finding meaningful interpretation of digital content. This is true for music interpretation, understanding of natural language as well as visual recognition and interpretation. Visual interpretation may stay a challenging task for a longer time because of the sensory nature of most of the information present in videos and people's high level narrative interpretations that are specific to video because of its sequential nature.
 
-The wide domain represented by the increasing amount of user generated video content that gets uploaded to the internet will furthermore present challenges in tasks like retrieval and recommendation. On the other hand the incorporation of this content in online video sharing platforms means that popular content is frequently interacted with. These existing interactions may be used to leverage the motivation by implicit work in human computation applications directing users' interaction data to serve a larger purpose relating to video interpretation.
+The wide domain represented by the increasing amount of user-generated video content that gets uploaded to the web will furthermore present challenges in tasks like retrieval and recommendation. On the other hand, the incorporation of this content in online video sharing platforms, means that popular content is frequently interacted with. These existing interactions may be used to leverage the motivation by implicit work in human computation applications directing users' interaction data to serve a larger purpose relating to video interpretation.
 
-We have suggested the paradigm of human computation as a viable option to make video content more accessible to computer systems and thereby indirectly to their users. It should be noted that in pointing to an alternative solution to the problems raised by the semantic gap, intensions are not to point away from the strategies described in chapter \ref{ch:meaning_in_video}. These methods have achieved promising results and shown much improvement in past year. Considering the first point in Quinn and Bederson's definition of human computation, we can maintain hope that new or improved computational approaches will continue to narrow the semantic gap.
+We have suggested the paradigm of human computation as a viable option to make video content more accessible to computer systems and thereby indirectly to their users. It should be noted that in pointing to an alternative solution to the problems raised by the semantic gap, intensions are not to point away from the strategies described in chapter \ref{ch:meaning_in_video}. These methods have achieved promising results and shown much improvement in recent years. Considering the first point in Quinn and Bederson's definition of human computation, we can maintain hope that new or improved computational approaches will continue to narrow the semantic gap.
 
 
 % section bypassing_the_semantic_gap (end)
